Save globalization with cookies

--- a/Crypto.Blazor/Client/Shared/ResourceFiles/Resource.resx
+++ b/Crypto.Blazor/Client/Shared/ResourceFiles/Resource.resx
@@ -118,6 +118,6 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="CurrentLanguage" xml:space="preserve">
-    <value>Português</value>
+    <value>pt</value>
   </data>
 </root>
